# c-learning

./: .gitignore  array  array.c  char-string  char-string.c  control-flow  control-flow.c  function  function.c  hello  hello.c  input-output  input-output.c  main.c  operations  operations.c  pointer  pointer.c  struct-union  struct-union.c  submain.c  submain.h
data-structure/: array.c  array.txt
enabler.sysprog01.c/: CMakeLists.txt  Makefile  Makefile.msvc  basic_compare.c  basic_compare_bool.c  basic_function.c  basic_function_multi.c  basic_function_noret.c  basic_function_proto.c  basic_functions.c  basic_functions.h  basic_io.c  basic_io_if.c  basic_io_ifelse.c  basic_io_switch.c  basic_math.c  basic_preproc.c  basic_preproc_token_pasting.c  basic_ptr.c  basic_ptr_arr.c  basic_ptr_func.c  basic_struct.c  basic_struct_arr.c  basic_typedef.c  basic_union.c  char-input-output  char-input-output.c  eof  eof.c  factorial.c  fahr-celc.c  fahr-celc2.c  hello  hello..j  hello.c  hello.html  hello.js  hello.wasm  leet.js  leet.ts  (+5 more)
self-learning/: counting-input.c  counting_char.c  false-counting-input.c  file_copying_1_5_1.c  line-counting.c  pointer-explore.c  putchar.c
self-learning/exercise/: exercise-1-6.c  exercise-1-7.c
